[package]
name = "recho"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
actix-web-validator = "6.0.0"
validator = { version = "0.18.1", features = ["derive"] }
env_logger = "0.11.5"
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
config = "0.14.0"
url = "2.5.2"
serde_json = "1.0.128"
futures-util = "0.3.30"
prometheus-client = "0.22.3"
anyhow = "1.0.89"
log = "0.4.22"
tonic = { version = "0.12.3",features = ["tls"] }
tonic-reflection = "0.12.3"
prost = "0.13"
tokio = "1.24.2"
tower = "0.5.1"
hyper = "1.4.1"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
