[package]
name = "recho"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-validator = "6.0.0"
validator = { version = "0.18.1", features = ["derive"] }
env_logger = "0.11.5"
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
config = "0.14.0"
url = "2.5.2"
serde_json = "1.0.128"
futures-util = "0.3.30"
prometheus-client = "0.22.3"
anyhow = "1.0.89"
log = "0.4.22"
tonic = { version = "0.12.3", features = ["tls"] }
tonic-reflection = "0.12.3"
prost = "0.13"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
tower = "0.5.1"
hyper = "1.4.1"
rustls = "0.23.13"
rustls-pemfile = "2.1.3"
tokio-rustls = "0.26.0"
hyper-util = "0.1.9"
tower-http = { version = "0.6.1", features = ["util", "add-extension"] }
futures = "0.3.30"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
